force-app/main/default/objects/custom_create275__c/custom_create275__c.object-meta.xml
<CustomObject>
    <label>Custom created object275</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects275</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>