force-app/main/default/objects/custom_create275__c/fields/custom_create_275field569__c.field-meta.xml
<CustomField>
    <fullName>custom_create_275field569__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 275field569</label>
    <type>Checkbox</type>
</CustomField>